--- a/assets/styles/scss/_tech.scss
+++ b/assets/styles/scss/_tech.scss
@@ -13,12 +13,13 @@
     font-size: 10px;
     font-style: normal;
     color: var(--color);
+    font-feature-settings: 'pnum' on, 'lnum' on;
   }
 
 // Миксин для заголовка инфы по планете
   @mixin planet-title {
     font-family: "Rock 3D";
-    font-size: clamp(3.3rem, 10vw, 14.4rem);
+    font-size: clamp(5.5rem, 10vw, 14.4rem);
   }
 
 // Миксин для заголовков блока с виджетами и статистики
@@ -54,11 +55,11 @@
     font-family: "Raleway";
     font-weight: 400;
     font-size: 1.4rem;
+    padding-right: 12px;
   } 
 
 // Миксин для всех таблиц, кнопок, виджетов. Определяет белую широкую рамку. Но не задает скругления. Бордер-радиус надо прописать самим
   @mixin border {
-    border: 4px solid var(--color-text);
+    border: 4px solid var(--color);
     background-color: transparent;
-    color: var(--color-active);
   }
