--- a/assets/styles/scss/_header.scss
+++ b/assets/styles/scss/_header.scss
@@ -1,8 +1,9 @@
 .header {
     display: grid;
-    grid-template-columns: 1fr 1.3fr 1fr;
+    grid-template-columns: 2fr 2fr 1fr;
     align-items: center;
-    padding: 32px 0 clamp(3.1rem, 8vw, 17.5rem);   
+    padding: 32px 0 clamp(3.1rem, 8vw, 17.5rem); 
+    z-index: 10;  
             
     @media (max-width: 1279px) {
         padding-top: 20px;
@@ -45,7 +46,6 @@
             position: absolute;
             height: 2px;
             width: 50px;
-            // transition: all .3s ease 0s;
             background-color: var(--color);
             transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
             0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
@@ -58,18 +58,15 @@
 
         &::before {
             top: 0;
-            // transform: translateY(10px) rotate(-45deg);
         }
 
         &::after {
             bottom: 0;
-            // transform: translateY(-10px) rotate(45deg);
         }
 
         span {
             top: 50%;
             transform: translate(0, -50%);
-            // opacity: 0;
         }
 
     }
@@ -103,7 +100,16 @@
         transition: .3s;
 
         &:hover {
-            @include h4;
+            font-weight: 600;
+        }
+
+        &::after {
+            display: block;
+            content: attr(title);
+            height: 0;
+            font-weight: 600;
+            overflow: hidden;
+            visibility: hidden;
         }
 
         @media (max-width: 767px) {
@@ -120,8 +126,10 @@
     position: relative;
 
     &__img {
+        width: 300px;
+        height: 330px;
         position: absolute;
-        top: -48rem;
+        top: -28rem;
         left: 0;
         animation: rotation 180s linear infinite;
 
