--- a/assets/styles/scss/_planetInfo.scss
+++ b/assets/styles/scss/_planetInfo.scss
@@ -19,10 +19,12 @@
         justify-content: center;
         align-items: center;
         padding-bottom: 5%;
-        // transition: 3s;
+        animation: shake 60s linear infinite;
+        animation-play-state: paused;
 
         &:hover {
             animation: shake 60s linear infinite;
+            animation-play-state: running;
         }
     }
 
@@ -30,6 +32,7 @@
         0% { transform: translate(1px, 1px) rotate(0deg); }
         50% { transform: translate(-1px, 2px) rotate(30deg); }
         100% { transform: translate(1px, -2px) rotate(-30deg); }
+        
       }
 
     &__row {
@@ -85,3 +88,12 @@
         @include h5;
     }
 }
+
+.animation-opacity {
+    animation: opac 5s ease;
+}
+
+    @keyframes opac {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
